tests/fixtures/positive/licensing/OptInWithoutJustification.kt
package licensing

import kotlinx.coroutines.ExperimentalCoroutinesApi

@OptIn(ExperimentalCoroutinesApi::class)
fun useApi() {
    /* ... */
}
