tests/fixtures/negative/licensing/OptInMarkerNotRecognised.kt
package test

import kotlinx.coroutines.ExperimentalCoroutinesApi

@OptIn(ExperimentalCoroutinesApi::class)
fun knownMarker() {
}
